# ChonkyStation3

./: .gitmodules  CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/workflows/: linux.yml  macos.yml  qt.yml  windows.yml
ChonkyStation3/: ChonkyStation3.cpp  PlayStation3.cpp  PlayStation3.hpp  Settings.cpp  Settings.hpp
ChonkyStation3/Audio/: AudioDevice.hpp
ChonkyStation3/Audio/Null/: NullDevice.cpp  NullDevice.hpp
ChonkyStation3/Audio/miniaudio/: MiniaudioDevice.cpp  MiniaudioDevice.hpp
ChonkyStation3/Common/: CellTypes.hpp  MemoryConstants.hpp  common.hpp
ChonkyStation3/Filesystem/: Filesystem.cpp  Filesystem.hpp
ChonkyStation3/Frontend/: AboutWindow.cpp  AboutWindow.hpp  GameWindow.cpp  GameWindow.hpp  MainWindow.cpp  MainWindow.hpp  PKGInstallerOverlay.cpp  PKGInstallerOverlay.hpp  SettingsWidget.cpp  ThreadDebuggerWidget.cpp
ChonkyStation3/Frontend/UI/: about.ui  mainwindow.ui  (+1 more)
ChonkyStation3/Memory/: Memory.cpp  Memory.hpp
ChonkyStation3/OS/: ModuleManager.cpp  PRXManager.cpp  PRXManager.hpp  SPUThread.cpp  SPUThread.hpp  SPUThreadManager.cpp  SPUThreadManager.hpp  Syscall.cpp  Syscall.hpp  Thread.cpp  ThreadManager.cpp  ThreadManager.hpp
ChonkyStation3/PPU/: PPU.hpp  PPUTypes.hpp
ChonkyStation3/RSX/: FragmentInstruction.hpp  FragmentShaderDecompiler.cpp  RSX.cpp  RSX.hpp  VertexShaderDecompiler.cpp  VertexShaderDecompiler.hpp
ChonkyStation3/SPU/: SPU.cpp  SPU.hpp
ChonkyStation3/Scheduler/: Scheduler.cpp  Scheduler.hpp
Dependencies/: CMakeLists.txt
Dependencies/OpenGL/: opengl.hpp
Dependencies/Panda3DS/: logger.hpp
(+46 files in other folders)
